--- a/src/Resources/app/administration/src/override/sw-customer/component/sw-customer-base-info/sw-customer-base-info.twig
+++ b/src/Resources/app/administration/src/override/sw-customer/component/sw-customer-base-info/sw-customer-base-info.twig
@@ -14,7 +14,7 @@
 
         {% block sw_customer_base_metadata_2fa_editor %}
             <dd v-else>
-                <sw-button if="twoFactorAuthenticationActive" @click="disable2FA">{{ $tc('rl-2fa.settings.user-detail.enabled.disable') }}</sw-button>
+                <mt-button if="twoFactorAuthenticationActive" @click="disable2FA">{{ $tc('rl-2fa.settings.user-detail.enabled.disable') }}</mt-button>
             </dd>
         {% endblock %}
     </sw-description-list>
