--- a/src/Resources/app/administration/src/override/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
+++ b/src/Resources/app/administration/src/override/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
@@ -5,9 +5,7 @@
     </template>
 
     <template v-else>
-        <router-view
-            v-slot="{ Component }"
-        >
+        <router-view v-slot="{ Component }">
             <component
                 :is="Component"
                 v-bind="{
