--- a/src/Resources/app/administration/src/override/sw-login/view/sw-login-login/sw-login-login.html.twig
+++ b/src/Resources/app/administration/src/override/sw-login/view/sw-login-login/sw-login-login.html.twig
@@ -9,7 +9,7 @@
 
             <mt-text-field
                 v-autofocus
-                v-model:value="otp"
+                v-model="otp"
                 label="One-time password"
                 required
                 autocomplete="one-time-code">
