--- a/src/Resources/views/administration/index.html.twig
+++ b/src/Resources/views/administration/index.html.twig
@@ -6,35 +6,35 @@
         //TODO initialize bootLogin 6.7 way (?)
 
             // Rewrite bootLogin function to load our custom code allowing the 2 factor authentication
-            // Shopware.Application.bootLogin = function () {
-        {#        // set force reload after successful login#}
-        {#        sessionStorage.setItem('sw-login-should-reload', 'true');#}
+            {#Shopware.Application.bootLogin = function () {#}
+            {#    // set force reload after successful login#}
+            {#    sessionStorage.setItem('sw-login-should-reload', 'true');#}
 
-        {#        /**#}
-        {#         * Login Application Booting:#}
-        {#         *#}
-        {#         * 1. Initialize all login initializer#}
-        {#         * 2. Initialize the conversion of dependencies in view adapter#}
-        {#         * 3. Create the application root#}
-        {#         */#}
+            {#    /**#}
+            {#     * Login Application Booting:#}
+            {#     *#}
+            {#     * 1. Initialize all login initializer#}
+            {#     * 2. Initialize the conversion of dependencies in view adapter#}
+            {#     * 3. Create the application root#}
+            {#     */#}
 
-        {#        return this.initializeLoginInitializer()#}
-        {#            .then(() => this.injectPlugin({#}
-        {#                js: "{{ asset('administration/js/rune-laenen-two-factor-auth.js', '@RuneLaenenTwoFactorAuth') }}"#}
-        {#            }))#}
-        {#            .then(() => {#}
-        {#                if (!this.view) {#}
-        {#                    return Promise.reject();#}
-        {#                }#}
+            {#    return this.initializeLoginInitializer()#}
+            {#        .then(() => this.injectPlugin({#}
+            {#            js: "{{ asset('administration/js/rune-laenen-two-factor-auth.js', '@RuneLaenenTwoFactorAuth') }}"#}
+            {#        }))#}
+            {#        .then(() => {#}
+            {#            if (!this.view) {#}
+            {#                return Promise.reject();#}
+            {#            }#}
 
-        {#                return this.view.initDependencies();#}
-        {#            })#}
-        {#            .then(() => this.createApplicationRoot())#}
-        {#            .catch((error) => this.createApplicationRootError(error));#}
+            {#            return this.view.initDependencies();#}
+            {#        })#}
+            {#        .then(() => this.createApplicationRoot())#}
+            {#        .catch((error) => this.createApplicationRootError(error));#}
 
-        {#        // set force reload after successful login#}
-        {#        sessionStorage.setItem('sw-login-should-reload', 'true');#}
-        //     }
+            {#    // set force reload after successful login#}
+            {#    sessionStorage.setItem('sw-login-should-reload', 'true');#}
+            {#}#}
     </script>
 
     {{ parent() }}
