Make buttons more distinct

--- a/src/Resources/views/storefront/page/account/profile/2fa/disable.html.twig
+++ b/src/Resources/views/storefront/page/account/profile/2fa/disable.html.twig
@@ -19,7 +19,7 @@
         </p>
 
         {% block page_account_profile_2fa_disable_button %}
-            <button type="submit" class="account-profile-2fa-setup-verify btn btn-primary btn-block">
+            <button type="submit" class="account-profile-2fa-setup-verify btn btn-danger btn-block">
                 {{ "rl-2fa.account.disable.submit"|trans|sw_sanitize }}
             </button>
         {% endblock %}
