--- a/src/Resources/views/storefront/page/account/profile/index.html.twig
+++ b/src/Resources/views/storefront/page/account/profile/index.html.twig
@@ -36,7 +36,7 @@
                                     } %}
 
                                     <button type="submit"
-                                            class="account-profile-2fa-start-setup btn btn-primary"
+                                            class="account-profile-2fa-start-setup btn btn-danger"
                                             data-ajax-modal="true"
                                             data-url="{{ path('widgets.rl-2fa.profile.disable') }}"
                                             title="{{ "rl-2fa.account.disable-2fa"|trans|striptags }}">
