--- a/src/Resources/views/administration/index.html.twig
+++ b/src/Resources/views/administration/index.html.twig
@@ -2,40 +2,29 @@
 
 {% block administration_login_scripts %}
     <script nonce="{{ cspNonce }}">
+        if (!window._swLoginOverrides) {
+            window._swLoginOverrides = [];
+        }
 
-        //TODO initialize bootLogin 6.7 way (?)
+        window._swLoginOverrides.push(() => {
+            sessionStorage.setItem('sw-login-should-reload', 'true');
 
-            // Rewrite bootLogin function to load our custom code allowing the 2 factor authentication
-            {#Shopware.Application.bootLogin = function () {#}
-            {#    // set force reload after successful login#}
-            {#    sessionStorage.setItem('sw-login-should-reload', 'true');#}
+            Shopware.Application.bootLogin = function () {
+                return this.initializeLoginInitializer()
+                    .then(() => this.injectPlugin({
+                        //TODO fix hardcoded path to rune-laenen-two-factor-auth-BWtuMecm.js
+                        js: "{{ asset('administration/assets/rune-laenen-two-factor-auth-BWtuMecm.js', '@RuneLaenenTwoFactorAuth') }}"
+                    }))
+                    .then(() => {
+                        if (!this.view) {
+                            return Promise.reject();
+                        }
 
-            {#    /**#}
-            {#     * Login Application Booting:#}
-            {#     *#}
-            {#     * 1. Initialize all login initializer#}
-            {#     * 2. Initialize the conversion of dependencies in view adapter#}
-            {#     * 3. Create the application root#}
-            {#     */#}
-
-            {#    return this.initializeLoginInitializer()#}
-            {#        .then(() => this.injectPlugin({#}
-            {#            js: "{{ asset('administration/js/rune-laenen-two-factor-auth.js', '@RuneLaenenTwoFactorAuth') }}"#}
-            {#        }))#}
-            {#        .then(() => {#}
-            {#            if (!this.view) {#}
-            {#                return Promise.reject();#}
-            {#            }#}
-
-            {#            return this.view.initDependencies();#}
-            {#        })#}
-            {#        .then(() => this.createApplicationRoot())#}
-            {#        .catch((error) => this.createApplicationRootError(error));#}
-
-            {#    // set force reload after successful login#}
-            {#    sessionStorage.setItem('sw-login-should-reload', 'true');#}
-            {#}#}
+                        return this.view.initDependencies();
+                    })
+                    .then(() => this.createApplicationRoot())
+                    .catch((error) => this.createApplicationRootError(error));
+            }
+        })
     </script>
-
-    {{ parent() }}
 {% endblock %}
