--- a/src/Resources/app/administration/src/component/rl-user-otp/rl-user-otp.html.twig
+++ b/src/Resources/app/administration/src/component/rl-user-otp/rl-user-otp.html.twig
@@ -1,21 +1,23 @@
 {% block rl_user_otp_user_card %}
-    <mt-card :title="$tc('rl-2fa.settings.user-detail.title')"
-             :is-loading="isLoading || isLoading2Fa">
+    <mt-card
+        :title="$tc('rl-2fa.settings.user-detail.title')"
+        :is-loading="isLoading || isLoading2Fa"
+    >
         <div v-if="user && user.customFields && user.customFields.rl_2fa_secret">
-
             <mt-banner
                 variant="positive"
                 :title="$tc('rl-2fa.settings.user-detail.enabled.title')"
                 style="margin-bottom: 0;"
                 :showIcon="true"
-                :closable="false">
+                :closable="false"
+            >
                 {{ $tc('rl-2fa.settings.user-detail.enabled.description') }}
             </mt-banner>
-
             <mt-button
                 variant="critical"
                 class="mt-1"
-                @click="disable2FA">
+                @click="disable2FA"
+            >
                 {{ $tc('rl-2fa.settings.user-detail.enabled.disable') }}
             </mt-button>
         </div>
@@ -25,43 +27,51 @@
                 :title="$tc('rl-2fa.settings.user-detail.not-enabled.title')"
                 style="margin-bottom: 0;"
                 :showIcon="true"
-                :closable="false">
+                :closable="false"
+            >
                 {{ $tc('rl-2fa.settings.user-detail.not-enabled.description') }}
             </mt-banner>
-
             <mt-button
                 variant="primary"
                 class="mt-1"
-                @click="generateSecret">
+                @click="generateSecret"
+            >
                 {{ $tc('rl-2fa.settings.user-detail.not-enabled.get-started') }}
             </mt-button>
         </div>
         <div v-else-if="generatedSecretUrl">
             <sw-container columns="1fr 1fr">
                 <div class="rl-2fa-qr-code">
-                    <img :src="generatedSecretUrl" />
+                    <img :src="generatedSecretUrl"/>
                     <span class="rl-2fa-qr-code--secret">{{ generatedSecret }}</span>
                 </div>
                 <div>
-                    <b>{{ $tc('rl-2fa.settings.user-detail.generating.scan-code') }}</b><br />
-                    <br />
-                    {{ $tc('rl-2fa.settings.user-detail.generating.description') }}<br />
-                    <br />
+                    <b>
+                        {{ $tc('rl-2fa.settings.user-detail.generating.scan-code') }}
+                    </b>
+                    <br/>
+                    <br/>
+                    {{ $tc('rl-2fa.settings.user-detail.generating.description') }}
+                    <br/>
+                    <br/>
                     <mt-banner
                         variant="critical"
                         :title="$tc('rl-2fa.settings.user-detail.generating.error-title')"
                         :showIcon="true"
-                        v-if="oneTimePasswordError.length > 0">
+                        v-if="oneTimePasswordError.length > 0"
+                    >
                         {{ oneTimePasswordError }}
                     </mt-banner>
-
                     <mt-text-field
                         label="One-time Password"
                         :isInvalid="oneTimePasswordError.length > 0"
                         v-model="oneTimePassword"
-                        autocomplete="one-time-code"/>
-
-                    <mt-button variant="primary" @click="validateAndSaveOneTimePassword">
+                        autocomplete="one-time-code"
+                    />
+                    <mt-button
+                        variant="primary"
+                        @click="validateAndSaveOneTimePassword"
+                    >
                         {{ $tc('rl-2fa.settings.user-detail.generating.validate-save') }}
                     </mt-button>
                 </div>
