--- a/src/Resources/app/administration/src/override/sw-profile/view/sw-profile-index-general/sw-profile-index-general.html.twig
+++ b/src/Resources/app/administration/src/override/sw-profile/view/sw-profile-index-general/sw-profile-index-general.html.twig
@@ -1,5 +1,9 @@
 {% block sw_profile_index_general_password %}
-    <rl-user-otp :user="user" :isLoading="isUserLoading" :onSave="onSave"></rl-user-otp>
+    <rl-user-otp
+        :user="user"
+        :isLoading="isUserLoading"
+        :onSave="onSave"
+    ></rl-user-otp>
 
-    {% parent %}
+    {% parent() %}
 {% endblock %}
