--- a/src/Resources/views/storefront/page/2fa/verification.html.twig
+++ b/src/Resources/views/storefront/page/2fa/verification.html.twig
@@ -1,9 +1,10 @@
 {% sw_extends '@Storefront/storefront/base.html.twig' %}
 
-{% block base_flashbags %}{% endblock %}
 {% block base_scroll_up %}{% endblock %}
 
-{% block base_content %}
+{% block base_body_classes %}{{ parent() }} d-flex justify-content-center{% endblock %}
+
+{% block base_body_inner %}
     {% block page_2fa_verification %}
         <div class="row justify-content-center">
             <div class="col col-md-4 col-lg-3">
